Overview of changes from 1.5.0-beta2 to 1.5.0
=============================================
* Fixes
  - Fix absense of 'uim' feature provision in early initialization stages


Overview of changes from 1.5.0-beta to 1.5.0-beta2
==================================================
* Enhancements
  - uim.el
    * Improve candidates displaying on small window
    * Improve candidates displaying when resizing of the echo region
      is limited
    * Improve buffer scrolling

  - Update translations

* Fixes
  - uim.el
    * Fix serious bug and a related problem:
      When several buffers on different frames display preedits at the
      same time and user switches the focus from some frame to another
      frame, the buffers are crashed.

  - Qt4 bridge (experimental)
    * Fix X11 compose input support

  - Build problems
    * Fix stdint definitions on Debian etch and gcc4
    * Fix 'make check' failure in po caused by intltool 0.36.2
    * Update SigScheme to 0.8.3 to fix indifinite 'make check' failure
      on GC tests

  - uim-wnn
    * Fix misused arguments of jl_kanji_len()
    * Fix inappropriate message output to stdout that confuses uim.el

  - uim-notify
    * Fix buffer size calculation


Overview of changes from 1.5.0-alpha to 1.5.0-beta
==================================================
* New features
  - Provide 'uim' on Scheme (See "Feature provision of 'uim'" of
    doc/COMPATIBILITY for further information)

* Fixed
  - uim-wnn
    * Check file existence of rcfile
    * Set correct place of WNNLIBDIR when --without-wnn-libraries

  - uim-sh
    * Fix falling into eval loop after script execution

  - Update translations


Overview of changes from 1.4.x to 1.5.0-alpha
=============================================
* New features

  - uim-wnn (new IM)
    A Japanese multi-segment input method

  - uim-sj3 (new IM)
    A Japanese multi-segment input method

  - uim-elatin (new IM)
    Emacs-style Latin characters input method

  - uim-look (new IM)