@@ -1,17 +1,10 @@
-uim 1.5.0 Release Note
+uim 1.5.1 Release Note
 ======================
 
 About This Release
 ------------------
 
-This distribution of uim 1.5.0 is latest stable release of uim.
-
-This release achieved both considerable internal improvement and many
-user-visible new feature additions.
-
-The complicated legacy C part of uim which prevented extensions, design
-improvements and automated input method tests have been turned into Scheme
-codes or optimized out.
+This distribution of uim 1.5.1 is latest stable release of uim.
 
 Please report us if you find a problem.
 
@@ -22,6 +15,18 @@ Bug tracking system: http://bugs.freedesktop.org/
 
 What's New
 ----------
+Several bug fixes against 1.5.0. See NEWS for the detailed changes.
+
+
+What's New in 1.5.0
+-------------------
+
+This release achieved both considerable internal improvement and many
+user-visible new feature additions.
+
+The complicated legacy C part of uim which prevented extensions, design
+improvements and automated input method tests have been turned into Scheme
+codes or optimized out.
 
 See NEWS for the fully detailed changes.
 
