@@ -1,3 +1,11 @@
+Overview of changes from 1.5.0 to 1.5.1
+=======================================
+* Fixes
+  - uim Scheme library
+    * Fix unescaped strings in generated loader.scm which causes uim
+      initialization error on m17n-vi-han (bug #15901)
+
+
 Overview of changes from 1.5.0-beta2 to 1.5.0
 =============================================
 * Fixes
